--- a/CocktailCatalog/app/src/main/res/layout/fragment_age_check.xml
+++ b/CocktailCatalog/app/src/main/res/layout/fragment_age_check.xml
@@ -9,13 +9,12 @@
 
     <Button
         android:id="@+id/button_no"
-        android:layout_width="wrap_content"
+        android:layout_width="143dp"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:paddingStart="45dp"
-        android:paddingEnd="45dp"
+
         android:text="@string/no"
-        android:textSize="24sp"
+        app:cornerRadius="12dp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBaseline_toBaselineOf="@+id/button_yes"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,7 +28,9 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="200dp"
         android:layout_marginEnd="32dp"
+        android:fontFamily="@font/nunito"
         android:text="@string/are_you_over_18_years_old"
+        android:textColor="#FFFFFF"
         android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,20 +38,33 @@
 
     <Button
         android:id="@+id/button_yes"
-        android:layout_width="wrap_content"
+        android:layout_width="143dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
-        android:padding="10dp"
-        android:paddingStart="45dp"
-        android:paddingEnd="45dp"
         android:text="@string/yes"
         android:textAlignment="center"
-        android:textSize="24sp"
+        android:textSize="20sp"
         android:textStyle="bold"
+        app:cornerRadius="12dp"
         app:layout_constraintEnd_toStartOf="@+id/button_no"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ageQuestionLabel" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="421dp"
+        android:layout_height="592dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginEnd="104dp"
+        android:adjustViewBounds="true"
+        android:src="@drawable/ic_warstwa_2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.344" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
